--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -4,20 +4,16 @@
 <meta charset="UTF-8">
 <title>CareChain Dashboard</title>
 <style>
-  /* Reset & basic styles */
   * { box-sizing: border-box; margin: 0; padding: 0; font-family: Arial, sans-serif; }
   body { display: flex; min-height: 100vh; background: #f4f6f9; }
 
-  /* Sidebar */
   .sidebar {
     width: 220px;
     background: #2f3e46;
     color: #fff;
-    display: flex;
-    flex-direction: column;
     padding: 20px;
   }
-  .sidebar h2 { margin-bottom: 30px; font-size: 22px; }
+  .sidebar h2 { margin-bottom: 30px; }
   .sidebar a {
     color: #fff;
     text-decoration: none;
@@ -28,14 +24,8 @@
   }
   .sidebar a:hover { background: #354f52; }
 
-  /* Main content */
-  .main {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-  }
+  .main { flex: 1; display: flex; flex-direction: column; }
 
-  /* Top navbar */
   .navbar {
     height: 60px;
     background: #52796f;
@@ -46,24 +36,23 @@
     justify-content: space-between;
   }
 
-  /* Content area */
   .content {
     padding: 20px;
     flex: 1;
     display: flex;
     flex-direction: column;
-    align-items: center; /* center cards and map */
+    align-items: center;
   }
 
-  /* Cards */
   .cards {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
     gap: 20px;
     width: 100%;
     max-width: 900px;
-    margin-bottom: 30px; /* space between cards and map */
+    margin-bottom: 30px;
   }
+
   .card {
     background: #fff;
     padding: 20px;
@@ -71,100 +60,88 @@
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     text-align: center;
   }
-  .card h3 { font-size: 18px; margin-bottom: 10px; }
-  .card p { font-size: 16px; color: #555; }
 
-  /* Map */
-  .map-container {
-    width: 100%;
-    max-width: 600px;
-    text-align: center;
-  }
-  .map-container h2 {
-    margin-bottom: 15px;
-    color: #333;
-  }
-  .map-container img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-  }
-
-  /* Footer */
   .footer {
     height: 40px;
     background: #ddd;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 14px;
-    margin-top: auto;
-    width: 100%;
   }
-
 </style>
 </head>
 <body>
 
-  <!-- Sidebar -->
-  <div class="sidebar">
-    <h2>CareChain</h2>
-    <a href="#">Dashboard</a>
-    <a href="#">Users</a>
-    <a href="#">Reports</a>
-    <a href="#">Settings</a>
-    <a href="#">Logout</a>
+<!-- Sidebar -->
+<div class="sidebar">
+  <h2>CareChain</h2>
+  <div id="menu"></div>
+</div>
+
+<!-- Main -->
+<div class="main">
+  <div class="navbar">
+    <div id="welcomeText"></div>
+    <div>🔔</div>
   </div>
 
-  <!-- Main Content -->
-  <div class="main">
-    <!-- Top Navbar -->
-    <div class="navbar">
-      <div>Welcome, Admin</div>
-      <div>Notifications 🔔</div>
-    </div>
+  <div class="content">
+    <h1 id="dashboardTitle"></h1>
 
-    <!-- Content Area -->
-    <div class="content">
-      <h1>Dashboard</h1>
-      <div class="cards">
-        <div class="card">
-          <h3>Total Users</h3>
-          <p id="totalUsers">0</p>
-        </div>
-        <div class="card">
-          <h3>Active Sessions</h3>
-          <p id="activeSessions">0</p>
-        </div>
-        <div class="card">
-          <h3>New Signups</h3>
-          <p id="newSignups">0</p>
-        </div>
-        <div class="card">
-          <h3>Server Status</h3>
-          <p id="serverStatus">Online</p>
-        </div>
-      </div>
-
-      <!-- Sri Lanka Map -->
-      <div class="map-container">
-        <h2>Sri Lanka Map</h2>
-        <img src="assets/sri-lanka.jpg" alt="Sri Lanka Map">
-      </div>
-    </div>
-
-    <!-- Footer -->
-    <div class="footer">
-      &copy; 2026 CareChain. All rights reserved.
-    </div>
+    <div class="cards" id="cards"></div>
   </div>
+
+  <div class="footer">© 2026 CareChain</div>
+</div>
 
 <script>
-  // Example JS to populate card data
-  document.getElementById('totalUsers').textContent = 120;
-  document.getElementById('activeSessions').textContent = 8;
-  document.getElementById('newSignups').textContent = 5;
+  // 🔑 ROLE COMES FROM LOGIN (backend later)
+  const userRole = "hospital"; // "donor"
+
+  const menu = document.getElementById("menu");
+  const cards = document.getElementById("cards");
+  const title = document.getElementById("dashboardTitle");
+  const welcome = document.getElementById("welcomeText");
+
+  if (userRole === "hospital") {
+    welcome.textContent = "Welcome, Hospital Admin";
+    title.textContent = "Hospital Dashboard";
+
+    menu.innerHTML = `
+      <a href="#">Dashboard</a>
+      <a href="#">Patients</a>
+      <a href="#">Blood Requests</a>
+      <a href="#">Inventory</a>
+      <a href="#">Logout</a>
+    `;
+
+    cards.innerHTML = `
+      <div class="card"><h3>Total Patients</h3><p>120</p></div>
+      <div class="card"><h3>Blood Requests</h3><p>18</p></div>
+      <div class="card"><h3>Available Units</h3><p>240</p></div>
+      <div class="card"><h3>Status</h3><p>Operational</p></div>
+    `;
+  }
+
+  if (userRole === "donor") {
+    welcome.textContent = "Welcome, Donor";
+    title.textContent = "Donor Dashboard";
+
+    menu.innerHTML = `
+      <a href="#">Dashboard</a>
+      <a href="#">My Donations</a>
+      <a href="#">Nearby Hospitals</a>
+      <a href="#">Profile</a>
+      <a href="#">Logout</a>
+    `;
+
+    cards.innerHTML = `
+      <div class="card"><h3>Total Donations</h3><p>6</p></div>
+      <div class="card"><h3>Last Donation</h3><p>2 Months Ago</p></div>
+      <div class="card"><h3>Eligibility</h3><p>Eligible</p></div>
+      <div class="card"><h3>Rewards</h3><p>12 Points</p></div>
+    `;
+  }
 </script>
 
 </body>
