--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -15,9 +15,31 @@
                 <input type="text" placeholder="enter your name" id="fname" required>
             </div>
             <div class="birth">
-                <label for="bdate">birth-date</label>
-                <input type="date" id="bdate" name="bdate">
+                <label for="bdate">birth-date :</label>
+                <input type="date" id="bdate" name="bdate" required>
             </div>
+            <div class="nic">
+                <label for="nicno">Nic-no :</label>
+                <input type="number" id="nicno" placeholder="2004xxxxxxxx" required>
+            </div>
+            <div class="gen">
+                <label class="label1" for="genderr">Gender</label>
+
+                <label class="label2" for="Male">Male</label>
+                <input type="radio" name="genderr" value="Male">
+
+                <label  class="label3" for="female">Female</label>
+                <input type="radio" name="genderr" value="female">
+            </div>  
+            <div class="donated">
+                <label class="label4"for="order">Have you donated in previous six months</label>
+                <input type="radio" name="order">
+            </div>
+            <div class="buut">
+                <input class="rbutton" type="reset">
+                <input type="submit" class="sbutton">
+            </div>
+
         </div>
         
     </form>
